Fixed overlapping bubble title

--- a/app/src/app/styles/abstracts/palletes.scss
+++ b/app/src/app/styles/abstracts/palletes.scss
@@ -1,3 +1,35 @@
+$accent: (
+  50 : #e4e4e4,
+  100 : #bbbbbc,
+  200 : #8d8e8f,
+  300 : #5f6162,
+  400 : #3d3f41,
+  500 : #1b1d1f,
+  600 : #181a1b,
+  700 : #141517,
+  800 : #101112,
+  900 : #080a0a,
+  A100 : #51ffff,
+  A200 : #1effff,
+  A400 : #00eaea,
+  A700 : #00d0d0,
+  contrast: (
+      50 : #000000,
+      100 : #000000,
+      200 : #000000,
+      300 : #ffffff,
+      400 : #ffffff,
+      500 : #ffffff,
+      600 : #ffffff,
+      700 : #ffffff,
+      800 : #ffffff,
+      900 : #ffffff,
+      A100 : #000000,
+      A200 : #000000,
+      A400 : #000000,
+      A700 : #000000,
+  )
+);
 $primary: (
     50 : #eae5e9,
     100 : #cbbec8,
@@ -31,38 +63,38 @@ $primary: (
     )
 );
 
-$accent: (
-    50 : #e5f4f3,
-    100 : #bee4e1,
-    200 : #93d3cd,
-    300 : #67c1b8,
-    400 : #47b3a9,
-    500 : #26a69a,
-    600 : #229e92,
-    700 : #1c9588,
-    800 : #178b7e,
-    900 : #0d7b6c,
-    A100 : #adfff3,
-    A200 : #7affec,
-    A400 : #47ffe4,
-    A700 : #2dffe0,
-    contrast: (
-        50 : #000000,
-        100 : #000000,
-        200 : #000000,
-        300 : #000000,
-        400 : #000000,
-        500 : #ffffff,
-        600 : #ffffff,
-        700 : #ffffff,
-        800 : #ffffff,
-        900 : #ffffff,
-        A100 : #000000,
-        A200 : #000000,
-        A400 : #000000,
-        A700 : #000000,
-    )
-);
+// $accent: (
+//     50 : #e5f4f3,
+//     100 : #bee4e1,
+//     200 : #93d3cd,
+//     300 : #67c1b8,
+//     400 : #47b3a9,
+//     500 : #26a69a,
+//     600 : #229e92,
+//     700 : #1c9588,
+//     800 : #178b7e,
+//     900 : #0d7b6c,
+//     A100 : #adfff3,
+//     A200 : #7affec,
+//     A400 : #47ffe4,
+//     A700 : #2dffe0,
+//     contrast: (
+//         50 : #000000,
+//         100 : #000000,
+//         200 : #000000,
+//         300 : #000000,
+//         400 : #000000,
+//         500 : #ffffff,
+//         600 : #ffffff,
+//         700 : #ffffff,
+//         800 : #ffffff,
+//         900 : #ffffff,
+//         A100 : #000000,
+//         A200 : #000000,
+//         A400 : #000000,
+//         A700 : #000000,
+//     )
+// );
 
 $warn: (
   50 : #fff3e0,
